Implement writing VPNC connection settings.

Please test!  I have no way of testing this code with a real VPNC
service.  It is only correct as far as I can see compared with the gnome
vpnc plugin.

BUG: 188489