vpnplugins/vpnc/vpncwidget.cpp
@@ -42,11 +42,25 @@ VpncSettingWidget::VpncSettingWidget(Knm::Connection * connection, QWidget * par
     d->dpdTimeout = 0;
     d->ui.setupUi(this);
     d->setting = static_cast<Knm::VpnSetting *>(connection->setting(Knm::Setting::Vpn));
+    connect(d->ui.cboUserPassOptions, SIGNAL(currentIndexChanged(int)), this, SLOT(userPasswordTypeChanged(int)));
+    connect(d->ui.cboGroupPassOptions, SIGNAL(currentIndexChanged(int)), this, SLOT(groupPasswordTypeChanged(int)));
 }
 
 VpncSettingWidget::~VpncSettingWidget()
 {
 
+}
+
+void VpncSettingWidget::userPasswordTypeChanged(int index)
+{
+    Q_D(VpncSettingWidget);
+    d->ui.leUserPassword->setEnabled(index == 1);
+}
+
+void VpncSettingWidget::groupPasswordTypeChanged(int index)
+{
+    Q_D(VpncSettingWidget);
+    d->ui.leGroupPassword->setEnabled(index == 1);
 }
 
 void VpncSettingWidget::readConfig()
@@ -105,7 +119,7 @@ void VpncSettingWidget::readConfig()
 void VpncSettingWidget::fillOnePasswordCombo(QComboBox * combo, const QString & key, const QStringMap & data, bool hasPassword)
 {
     if (data.contains(key)) {
-        if (data.value(key) == NM_VPNC_PW_TYPE_ASK) {
+        if (data.value(key) == NM_VPNC_PW_TYPE_SAVE) {
             combo->setCurrentIndex(1);
         } else if (data.value(key) == NM_VPNC_PW_TYPE_UNUSED) {
             combo->setCurrentIndex(2);
@@ -117,18 +131,94 @@ void VpncSettingWidget::fillOnePasswordCombo(QComboBox * combo, const QString & 
 
 void VpncSettingWidget::writeConfig()
 {
+    Q_D(VpncSettingWidget);
+    kDebug();
 
+    d->setting->setServiceType(QLatin1String(NM_DBUS_SERVICE_VPNC));
+
+    QStringMap data;
+    QVariantMap secretData;
+
+    // General settings
+    //   gateway
+    if (!d->ui.leGateway->text().isEmpty()) {
+        data.insert(NM_VPNC_KEY_GATEWAY, d->ui.leGateway->text());
+    }
+
+    //   group name
+    if (!d->ui.leGroupName->text().isEmpty()) {
+        data.insert(NM_VPNC_KEY_ID, d->ui.leGroupName->text());
+    }
+
+    //   user password
+    if (!d->ui.leUserPassword->text().isEmpty() && d->ui.cboUserPassOptions->currentIndex() == 0) {
+        secretData.insert(NM_VPNC_KEY_XAUTH_PASSWORD, d->ui.leUserPassword->text());
+    }
+    //   group password
+    if (!d->ui.leGroupPassword->text().isEmpty() && d->ui.cboGroupPassOptions->currentIndex() == 0) {
+        secretData.insert(NM_VPNC_KEY_SECRET, d->ui.leGroupPassword->text());
+    }
+    handleOnePasswordType(d->ui.cboUserPassOptions, NM_VPNC_KEY_XAUTH_PASSWORD_TYPE, data);
+    handleOnePasswordType(d->ui.cboGroupPassOptions, NM_VPNC_KEY_SECRET_TYPE, data);
+
+    // Optional settings
+    //   username
+    if (!d->ui.leUserName->text().isEmpty()) {
+        data.insert(NM_VPNC_KEY_XAUTH_USER, d->ui.leUserName->text());
+    }
+
+    //   domain
+    if (!d->ui.leDomain->text().isEmpty()) {
+        data.insert(NM_VPNC_KEY_DOMAIN, d->ui.leDomain->text());
+    }
+
+    //   encryption
+    switch (d->ui.cboEncryptionMethod->currentIndex()) {
+        case 1:
+            data.insert(NM_VPNC_KEY_SINGLE_DES, QLatin1String("yes"));
+            break;
+        case 2:
+            data.insert(NM_VPNC_KEY_NO_ENCRYPTION, QLatin1String("yes"));
+            break;
+        default:
+            break;
+    }
+
+    // nat traversal
+    switch (d->ui.cboNatTraversal->currentIndex()) {
+        case 1:
+            data.insert(NM_VPNC_KEY_NAT_TRAVERSAL_MODE, QLatin1String(NM_VPNC_NATT_MODE_NATT));
+            break;
+        case 2:
+            data.insert(NM_VPNC_KEY_NAT_TRAVERSAL_MODE, QLatin1String(NM_VPNC_NATT_MODE_NONE));
+            break;
+        default:
+            break;
+    }
+
+    // dead peer detection
+    if (d->ui.chkDeadPeerDetection->isChecked()) {
+        if (d->dpdTimeout > 0) {
+            data.insert(NM_VPNC_KEY_DPD_IDLE_TIMEOUT, QString::number(d->dpdTimeout));
+        }
+    } else {
+        data.insert(NM_VPNC_KEY_DPD_IDLE_TIMEOUT, QString::number(0));
+    }
+
+    d->setting->setUserName(d->ui.leUserName->text());
+    d->setting->setData(data);
+    d->setting->setVpnSecrets(secretData);
 }
 
-uint handleOnePasswordType(const QComboBox * combo, const QString & key, QStringMap & data)
+uint VpncSettingWidget::handleOnePasswordType(const QComboBox * combo, const QString & key, QStringMap & data)
 {
     uint type = combo->currentIndex();
     switch (type) {
         case 0:
-            data.insert(key, NM_VPNC_PW_TYPE_SAVE);
+            data.insert(key, NM_VPNC_PW_TYPE_ASK);
             break;
         case 1:
-            data.insert(key, NM_VPNC_PW_TYPE_ASK);
+            data.insert(key, NM_VPNC_PW_TYPE_SAVE);
             break;
         case 2:
             data.insert(key, NM_VPNC_PW_TYPE_UNUSED);
@@ -141,9 +231,15 @@ void VpncSettingWidget::readSecrets()
 {
     Q_D(VpncSettingWidget);
     QVariantMap secrets = d->setting->vpnSecrets();
-    d->ui.leUserPassword->setText(secrets.value(QLatin1String(NM_VPNC_KEY_XAUTH_PASSWORD)).toString());
+    if (d->setting->data().value(NM_VPNC_KEY_XAUTH_PASSWORD_TYPE) == QLatin1String(NM_VPNC_PW_TYPE_SAVE)) {
+        d->ui.leUserPassword->setText(secrets.value(QLatin1String(NM_VPNC_KEY_XAUTH_PASSWORD)).toString());
+    }
     fillOnePasswordCombo(d->ui.cboUserPassOptions, NM_VPNC_KEY_XAUTH_PASSWORD_TYPE, d->setting->data(), !d->ui.leUserName->text().isEmpty());
-    d->ui.leGroupPassword->setText(secrets.value(QLatin1String(NM_VPNC_KEY_SECRET)).toString());
+
+    if (d->setting->data().value(NM_VPNC_KEY_SECRET_TYPE) == QLatin1String(NM_VPNC_PW_TYPE_SAVE)) {
+        d->ui.leGroupPassword->setText(secrets.value(QLatin1String(NM_VPNC_KEY_SECRET)).toString());
+    }
     fillOnePasswordCombo(d->ui.cboGroupPassOptions, NM_VPNC_KEY_SECRET_TYPE, d->setting->data(), !d->ui.leGroupPassword->text().isEmpty());
 }
+
 // vim: sw=4 sts=4 et tw=100
